[tool.poetry]
name = "pybatchintory"
version = "0.0.7"
description = "Middleware for generating batches of data items enabling incremental processing and backfill scenarios with predictable workloads."
authors = ["Franz Wöllert <franz.woellert@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.1"
sqlalchemy = [
     {version = "<1.5", python = ">=3.7,<3.8"},
     {version = "^2.0", python = ">=3.8,<4"}
  ]
pandas = "^1.2"
pydantic = "^1.8"

[tool.poetry.group.interactive]
optional = true

[tool.poetry.group.interactive.dependencies]
ipykernel = [
    {version = "<=6.16.2", python = ">=3.7,<3.8"},
    {version = "^6.21", python = ">=3.8,<4"}
 ]


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
packaging = "^23.0"

[tool.poetry.group.postgresql.dependencies]
psycopg2-binary = "^2.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
